--- a/pathfinder/src/main/resources/templates/bicycle.html
+++ b/pathfinder/src/main/resources/templates/bicycle.html
@@ -6,7 +6,7 @@
 <body>
 <div class="wrapper">
     <!-- Navigation -->
-    <header th:replace="fragments/commons::navigation">
+    <header th:replace="~{fragments/commons::head}">
 </header>
 
     <section class="road">
@@ -20,6 +20,6 @@
 </div>
 <!-- Wrapper Ends -->
 </body>
-<footer th:replace="fragments/commons::footer">
+<footer th:replace="~{fragments/commons::footer}">
 </footer>
 </html>
