--- a/pathfinder/src/main/resources/templates/motorcycle.html
+++ b/pathfinder/src/main/resources/templates/motorcycle.html
@@ -1,12 +1,12 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments/commons::head">
+<head th:replace="~{fragments/commons::head}">
 </head>
 <body>
 <div class="wrapper">
     <!-- Navigation -->
-<header th:replace="fragments/commons::navigation">
+<header th:replace="~{fragments/commons::navigation}">
 </header>
 
      <section class="road">
@@ -20,6 +20,6 @@
 </div>
 <!-- Wrapper Ends -->
 </body>
-<footer th:replace="fragments/commons::footer">
+<footer th:replace="~{fragments/commons::footer}">
 </footer>
 </html>
