--- a/pathfinder/src/main/resources/templates/about.html
+++ b/pathfinder/src/main/resources/templates/about.html
@@ -1,12 +1,12 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments/commons::head">
+<head th:replace="~{fragments/commons::head}">
 </head>
 <body>
 <div class="wrapper">
     <!-- Navigation -->
-<header th:replace="fragments/commons::navigation">
+<header th:replace="~{fragments/commons::navigation}">
 </header>
 
     <div class="info">
@@ -39,6 +39,6 @@
 </div>
 <!-- Wrapper Ends -->
 </body>
-<footer th:replace="fragments/commons::footer">
+<footer th:replace="~{fragments/commons::footer}">
 </footer>
 </html>
