--- a/pathfinder/src/main/resources/templates/add-route.html
+++ b/pathfinder/src/main/resources/templates/add-route.html
@@ -1,11 +1,11 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/commons::head">
+<head th:replace="~{fragments/commons::head}">
 </head>
 <body>
 <!--<div class="wrapper">-->
 <!-- Navigation -->
-<header th:replace="fragments/commons::navigation">
+<header th:replace="~{fragments/commons::navigation}">
 
 </header>
 
@@ -96,7 +96,7 @@
 
     </form>
 </div>
-<footer th:replace="fragments/commons::footer">
+<footer th:replace="~{fragments/commons::footer}">
 </footer>
 </body>
 </html>
