--- a/pathfinder/src/main/resources/templates/index.html
+++ b/pathfinder/src/main/resources/templates/index.html
@@ -1,12 +1,12 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments/commons::head">
+<head th:replace="~{fragments/commons::head}">
 </head>
 <body>
 <div class="wrapper">
     <!-- Navigation -->
-    <header th:replace="fragments/commons::navigation">
+    <header th:replace="~{fragments/commons::navigation}">
 </header>
     <!-- Top Container -->
     <section class="top-container">
@@ -80,7 +80,7 @@
 </div>
 <!-- Wrapper Ends -->'
 
-<footer th:replace="fragments/commons::footer"
+<footer th:replace="~{fragments/commons::footer}"
 
 >
 
