--- a/pathfinder/src/main/resources/templates/login.html
+++ b/pathfinder/src/main/resources/templates/login.html
@@ -1,6 +1,6 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/commons::head">
+<head th:replace="~{fragments/commons::head}">
 </head>
 <body>
 <main class="p-5 align-content-center bg-blur my-register-div">
@@ -45,7 +45,7 @@
 
     </div>
 </main>
-<footer th:replace="fragments/commons::footer">
+<footer th:replace="~{fragments/commons::footer}">
 </footer>
 </body>
 </html>
