--- a/pathfinder/src/main/resources/templates/route-details.html
+++ b/pathfinder/src/main/resources/templates/route-details.html
@@ -1,11 +1,11 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments/commons::head">
+<head th:replace="~{fragments/commons::head}">
 </head>
 <body>
 <div class="wrapper">
-    <header th:replace="fragments/commons::navigation">
+    <header th:replace="~{fragments/commons::navigation}">
 </header>
 
     <input type="hidden" name="routeId" id="routeId">   
@@ -100,7 +100,7 @@
     <script th:src="@{/js/comments.js}"></script>
 	-->
 </div>
-<footer th:replace="fragments/commons::footer">
+<footer th:replace="~{fragments/commons::footer}">
 </footer>
 </body>
 </html>
