--- a/pathfinder/src/main/resources/templates/login.html
+++ b/pathfinder/src/main/resources/templates/login.html
@@ -10,8 +10,8 @@
         <div class="row g-3 align-items-center">
 
             <form
-                    action="/"
-                    method="">
+                    action="/users/login"
+                    method="POST">
                 <div>
                     <div class="col-auto">
                         <label for="inputUsername" class="col-form-label ">Username</label>
