--- a/pathfinder/src/main/resources/templates/fragments/commons.html
+++ b/pathfinder/src/main/resources/templates/fragments/commons.html
@@ -26,27 +26,31 @@
                 <li>
                     <a href="/">Home</a>
                 </li>
-                <li>
-                    <a href="/users/login">Login</a>
-                </li>
-                <li>
-                    <a href="/users/register">Register</a>
-                </li>
+                <th:block th:if="${!@currentUser.isLogged()}">
+                    <li>
+                        <a href="/users/login">Login</a>
+                    </li>
+                    <li>
+                        <a href="/users/register">Register</a>
+                    </li>
+                </th:block>
                 <li>
                     <a href="/about">About</a>
                 </li>
-                <li>
-                    <a href="/routes/add">Add new route</a>
-                </li>
-                <li>
-                    <a href="/users/profile">Profile</a>
-                </li>
-                <li>
-                    <a href="/">Admin</a>
-                </li>
-                <li>
-                    <a href="/">Logout</a>
-                </li>
+                <th:block th:if="${@currentUser.isLogged()}">
+                    <li>
+                        <a href="/routes/add">Add new route</a>
+                    </li>
+                    <li>
+                        <a href="/users/profile">Profile</a>
+                    </li>
+                    <li>
+                        <a href="/">Admin</a>
+                    </li>
+                    <li>
+                        <a href="/">Logout</a>
+                    </li>
+                </th:block>
             </ul>
         </nav>
     </header>
