--- a/pathfinder/src/main/resources/templates/profile.html
+++ b/pathfinder/src/main/resources/templates/profile.html
@@ -13,7 +13,7 @@
                 <div class="profile-card p-3 py-4">
                     <div class="text-center"><img src="/images/profile.jpg" width="100" class="rounded-circle"></div>
                     <div class="text-center mt-3">
-                        <span class="bg-secondary p-1 px-4 rounded text-white">Pro</span>
+                        <span th:text="${@currentUser.getLevel()}" class="bg-secondary p-1 px-4 rounded text-white">Pro</span>
                         <h5 th:text="${@currentUser.getFullName()}" class="mt-4 mb-0">Full name</h5>
                         <span>UI/UX Designer</span>
                         <h5 th:text="${@currentUser.getUsername()} "class="mt-2 mb-0">Username</h5>
@@ -32,7 +32,7 @@
                             <li><i class="fab fa-google"></i></li>
                         </ul>
                         <div class="buttons">
-                            <button class="btn btn-outline-primary px-4">Back</button>
+                            <button onClick="window.location.href='/';" class="btn btn-outline-primary px-4">Back</button>
 <!--                            <button class="btn btn-primary px-4 ms-3">Contact</button>-->
                         </div>
                     </div>
