--- a/pathfinder/src/main/resources/templates/fragments/commons.html
+++ b/pathfinder/src/main/resources/templates/fragments/commons.html
@@ -48,7 +48,7 @@
                         <a href="/">Admin</a>
                     </li>
                     <li>
-                        <a href="/">Logout</a>
+                        <a href="/users/logout">Logout</a>
                     </li>
                 </th:block>
             </ul>
