--- a/pathfinder/src/main/resources/templates/register.html
+++ b/pathfinder/src/main/resources/templates/register.html
@@ -8,7 +8,7 @@
     <h1 class="border-bottom">Register</h1>
     <div class="d-flex justify-content-center ">
         <div class="row g-3">
-            <form
+            <form th:object="${userRegisterDTO}"
                     th:action="@{/users/register}"
                     th:method="POST">
                 <div>
@@ -16,14 +16,15 @@
                         <label for="inputUsername" class="col-form-label ">Username</label>
                     </div>
                     <div class="col-auto">
-                        <input name="username"
+                        <input th:field="*{username}"
                                required minlength="5" maxlength="20"
                                type="text"
                                id="inputUsername"
                                class="form-control"
                                aria-describedby="usernameHelpInline">
                         <small id="usernameError"
-                               class="invalid-feedback bg-danger rounded">Username length must be more than 3 characters</small>
+                               class="invalid-feedback bg-danger rounded">Username length must be more than 3
+                            characters</small>
 
                         <small id="usernameUniqueError"
                                class=" bg-danger rounded">Username is already occupied</small>
@@ -36,14 +37,15 @@
                         <label for="inputFullName" class="col-form-label ">Full Name</label>
                     </div>
                     <div class="col-auto">
-                        <input name="fullName"
+                        <input th:field="*{fullName}"
                                required minlength="5" maxlength="20"
                                type="text"
                                id="inputFullName"
                                class="form-control"
                                aria-describedby="fullNameHelpInline">
                         <small id="fullNameError"
-                               class="invalid-feedback  form-text bg-danger rounded">Full name length must be more than 3 characters</small>
+                               class="invalid-feedback  form-text bg-danger rounded">Full name length must be more than
+                            3 characters</small>
                     </div>
                 </div>
 
@@ -52,8 +54,8 @@
                         <label for="inputEmail" class="col-form-label ">Email</label>
                     </div>
                     <div class="col-auto">
-                        <input name="email"
-								required
+                        <input th:field="*{email}"
+                               required
                                type="email"
                                id="inputEmail"
                                class="form-control"
@@ -67,7 +69,7 @@
                         <label for="inputAge" class="col-form-label ">Age</label>
                     </div>
                     <div class="col-auto">
-                        <input name="age" required
+                        <input th:field="*{age}" required
                                type="number"
                                id="inputAge"
                                class="form-control"
@@ -82,8 +84,8 @@
                         <label for="inputPassword" class="col-form-label ">Password</label>
                     </div>
                     <div class="col-auto">
-                        <input name="password"
-                                required minlength="5" maxlength="20"
+                        <input th:field="*{password}"
+                               required minlength="5" maxlength="20"
                                type="password"
                                id="inputPassword"
                                class="form-control"
@@ -101,7 +103,7 @@
                     </div>
                     <div class="col-auto">
                         <input name="confirmPassword"
-                                required minlength="5" maxlength="20"
+                               required minlength="5" maxlength="20"
                                type="password"
                                id="inputConfirmPassword"
                                class="form-control"
