--- a/pathfinder/src/main/resources/templates/login.html
+++ b/pathfinder/src/main/resources/templates/login.html
@@ -10,15 +10,17 @@
         <div class="row g-3 align-items-center">
 
             <form
-                    action="/users/login"
-                    method="POST">
+                    th:object="${userLoginBindingModel}"
+                    th:action="@{/users/login}"
+                    th:method="POST">
                 <div>
+                    <h5 th:if="${!isExists}" th:class="bg-danger">Username or password not correct</h5>
                     <div class="col-auto">
                         <label for="inputUsername" class="col-form-label ">Username</label>
                     </div>
                     <div class="col-auto">
                         <input type="text"
-                               name="username"
+                               th:field="*{username}"
                                required minlength="4" maxlength="20"
                                id="inputUsername"
                                class="form-control"
@@ -31,7 +33,7 @@
                     </div>
                     <div class="col-auto">
                         <input type="password"
-                               name="password"
+                               th:field="*{password}"
                                required minlength="4" maxlength="20"
                                id="inputPassword" class="form-control"
                                aria-describedby="passwordHelpInline">
