--- a/pathfinder/src/main/resources/templates/fragments/commons.html
+++ b/pathfinder/src/main/resources/templates/fragments/commons.html
@@ -23,7 +23,7 @@
     <header th:fragment="navigation">
         <nav class="main-nav">
             <ul>
-                <th:block th:if="${@currentUser.id == null}" th:object="${@currentUser}">
+                <th:block th:object="${@currentUser}" th:if="${@currentUser.id == null}">
                     <li>
                         <a href="/">Home</a>
                     </li>
@@ -33,17 +33,17 @@
                     <li>
                         <a href="/users/register">Register</a>
                     </li>
-                </th:block>
                 <li>
                     <a href="/about">About</a>
                 </li>
+                </th:block>
 
-                <th:block th:if="${@currentUser.id != null}" th:object="${@currentUser}">
+                <th:block th:object="${@currentUser}" th:if="${@currentUser.id != null}">
                     <li>
                         <a href="/routes/add">Add new route</a>
                     </li>
                     <li>
-                        <a href="/users/profile">Profile</a>
+                        <a th:href="@{/users/profile/{id}(id = *{id})}">Profile</a>
                     </li>
                     <li>
                         <a href="/">Admin</a>
