--- a/pathfinder/src/main/resources/templates/profile.html
+++ b/pathfinder/src/main/resources/templates/profile.html
@@ -12,14 +12,14 @@
             <div class="col-md-7">
                 <div class="profile-card p-3 py-4">
                     <div class="text-center"><img src="/images/profile.jpg" width="100" class="rounded-circle"></div>
-                    <div class="text-center mt-3">
-                        <span th:text="${@currentUser.getLevel()}" class="bg-secondary p-1 px-4 rounded text-white">Pro</span>
-                        <h5 th:text="${@currentUser.getFullName()}" class="mt-4 mb-0">Full name</h5>
+                    <div class="text-center mt-3" th:object="${user}">
+                        <span th:text="*{getLevel()}" class="bg-secondary p-1 px-4 rounded text-white">Pro</span>
+                        <h5 th:text="*{getFullName()}" class="mt-4 mb-0">Full name</h5>
                         <span>UI/UX Designer</span>
-                        <h5 th:text="${@currentUser.getUsername()} "class="mt-2 mb-0">Username</h5>
+                        <h5 th:text="*{getUsername()} "class="mt-2 mb-0">Username</h5>
                         <span>UI/UX Designer</span>
                         <h5 class="mt-2 mb-0">Age</h5>
-                        <span th:text="${@currentUser.getAge()}">33</span>
+                        <span th:text="*{getAge()}">33</span>
                         <div class="px-4 mt-5">
                             <p class="fonts">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim et nostrum
                                 optio perferendis quam quod ratione rem sit soluta ut! A dolor laborum, maiores neque
